// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu renders Menu with Divider correctly 1`] = `
<ul
  class="mcore-menu mcore-menu--dark mcore-menu--inline"
  role="menu"
>
  <li
    class="mcore-menu-item mcore-menu-item--level-1"
    role="menuitem"
    style="padding-left:20px"
  >
    投保单复核
  </li>
  <li
    class="mcore-menu-item mcore-menu-item--level-1"
    role="menuitem"
    style="padding-left:20px"
  >
    在线投保单管理
  </li>
  <li
    class="mcore-menu__divider"
  />
  <li
    class="mcore-menu-item mcore-menu-item--level-1"
    role="menuitem"
    style="padding-left:20px"
  >
    投保单录入
  </li>
  <li
    class="mcore-menu-item mcore-menu-item--level-1"
    role="menuitem"
    style="padding-left:20px"
  >
    新增计划
  </li>
</ul>
`;

exports[`Menu renders Menu with ItemGroup correctly 1`] = `
<ul
  class="mcore-menu mcore-menu--light mcore-menu--vertical"
  role="menu"
>
  <li
    class="mcore-menu-item-group"
  >
    <div
      class="mcore-menu-item-group__title"
      style="padding-left:8px"
    >
      投保
    </div>
    <ul
      class="mcore-menu-item-group__list"
    >
      <li
        class="mcore-menu-item mcore-menu-item--level-1"
        role="menuitem"
        style="padding-left:20px"
      >
        投保单复核
      </li>
      <li
        class="mcore-menu-item mcore-menu-item--level-1"
        role="menuitem"
        style="padding-left:20px"
      >
        在线投保单管理
      </li>
    </ul>
  </li>
  <li
    class="mcore-menu__divider"
  />
  <li
    class="mcore-menu-item mcore-menu-item--level-1"
    role="menuitem"
    style="padding-left:20px"
  >
    投保单录入
  </li>
  <li
    class="mcore-menu-item mcore-menu-item--level-1"
    role="menuitem"
    style="padding-left:20px"
  >
    新增计划
  </li>
</ul>
`;

exports[`Menu renders Menu with dark theme correctly 1`] = `
<ul
  class="mcore-menu mcore-menu--dark mcore-menu--inline"
  role="menu"
>
  <li
    class="mcore-menu-submenu mcore-menu-submenu--level-1"
  >
    <div
      class="mcore-menu-submenu__title mcore-menu-submenu__title-level-1"
      style="padding-left:48px"
    >
      <span>
        <span />
        <span>
          新契约
        </span>
      </span>
      <i
        class="mcore-menu-submenu__arrow"
      />
    </div>
    <ul
      class="mcore-menu-submenu__sub"
      style="display:block"
    >
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        投保单复核
      </li>
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        在线投保单管理
      </li>
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        投保单录入
      </li>
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        新增计划
      </li>
    </ul>
  </li>
  <li
    class="mcore-menu-submenu mcore-menu-submenu--level-1"
  >
    <div
      class="mcore-menu-submenu__title mcore-menu-submenu__title-level-1"
      style="padding-left:48px"
    >
      <span>
        <span />
        <span>
          核保
        </span>
      </span>
      <i
        class="mcore-menu-submenu__arrow"
      />
    </div>
    <ul
      class="mcore-menu-submenu__sub"
      style="display:block"
    >
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        核保权限定义
      </li>
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        核保权限分配
      </li>
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        规则配置
      </li>
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        人工核保
      </li>
    </ul>
  </li>
  <li
    class="mcore-menu-submenu mcore-menu-submenu--level-1"
  >
    <div
      class="mcore-menu-submenu__title mcore-menu-submenu__title-level-1"
      style="padding-left:48px"
    >
      <span>
        <span />
        <span>
          批改
        </span>
      </span>
      <i
        class="mcore-menu-submenu__arrow"
      />
    </div>
    <ul
      class="mcore-menu-submenu__sub"
      style="display:block"
    >
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        批改新增
      </li>
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        批改复核
      </li>
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        批改回退
      </li>
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        批改共享池
      </li>
    </ul>
  </li>
</ul>
`;

exports[`Menu renders SubMenu with ItemGroup correctly 1`] = `
<ul
  class="mcore-menu mcore-menu--light mcore-menu--inline"
  role="menu"
>
  <li
    class="mcore-menu-submenu mcore-menu-submenu--level-1"
  >
    <div
      class="mcore-menu-submenu__title mcore-menu-submenu__title-level-1"
      style="padding-left:48px"
    >
      <span>
        <span />
        <span>
          新契约
        </span>
      </span>
      <i
        class="mcore-menu-submenu__arrow"
      />
    </div>
    <ul
      class="mcore-menu-submenu__sub"
      style="display:block"
    >
      <li
        class="mcore-menu-item-group"
      >
        <div
          class="mcore-menu-item-group__title"
          style="padding-left:36px"
        >
          投保
        </div>
        <ul
          class="mcore-menu-item-group__list"
        >
          <li
            class="mcore-menu-item mcore-menu-item--level-2"
            role="menuitem"
            style="padding-left:48px"
          >
            投保单复核
          </li>
          <li
            class="mcore-menu-item mcore-menu-item--level-2"
            role="menuitem"
            style="padding-left:48px"
          >
            在线投保单管理
          </li>
        </ul>
      </li>
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        投保单录入
      </li>
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        新增计划
      </li>
    </ul>
  </li>
  <li
    class="mcore-menu-item mcore-menu-item--level-1"
    role="menuitem"
    style="padding-left:20px"
  >
    投保单录入
  </li>
  <li
    class="mcore-menu-item mcore-menu-item--level-1"
    role="menuitem"
    style="padding-left:20px"
  >
    新增计划
  </li>
</ul>
`;

exports[`Menu renders collpased Menu correctly 1`] = `
<ul
  class="mcore-menu mcore-menu--light mcore-menu--inline mcore-menu--collapsed"
  role="menu"
>
  <li
    class="mcore-menu-item mcore-menu-item--level-1"
    role="menuitem"
  >
    <div
      style="height:100%"
    >
      投保单复核
    </div>
    )
  </li>
  <li
    class="mcore-menu-item mcore-menu-item--level-1"
    role="menuitem"
  >
    <div
      style="height:100%"
    >
      在线投保单管理
    </div>
    )
  </li>
  <li
    class="mcore-menu__divider"
  />
  <li
    class="mcore-menu-item mcore-menu-item--level-1"
    role="menuitem"
  >
    <div
      style="height:100%"
    >
      投保单录入
    </div>
    )
  </li>
  <li
    class="mcore-menu-item mcore-menu-item--level-1"
    role="menuitem"
  >
    <div
      style="height:100%"
    >
      新增计划
    </div>
    )
  </li>
</ul>
`;

exports[`Menu renders inline Menu with SubMenu correctly 1`] = `
<ul
  class="mcore-menu mcore-menu--light mcore-menu--inline"
  role="menu"
>
  <li
    class="mcore-menu-submenu mcore-menu-submenu--level-1"
  >
    <div
      class="mcore-menu-submenu__title mcore-menu-submenu__title-level-1"
      style="padding-left:48px"
    >
      <span>
        <span />
        <span>
          新契约
        </span>
      </span>
      <i
        class="mcore-menu-submenu__arrow"
      />
    </div>
    <ul
      class="mcore-menu-submenu__sub"
      style="display:block"
    >
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        投保单复核
      </li>
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        在线投保单管理
      </li>
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        投保单录入
      </li>
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        新增计划
      </li>
    </ul>
  </li>
  <li
    class="mcore-menu-submenu mcore-menu-submenu--level-1"
  >
    <div
      class="mcore-menu-submenu__title mcore-menu-submenu__title-level-1"
      style="padding-left:48px"
    >
      <span>
        <span />
        <span>
          核保
        </span>
      </span>
      <i
        class="mcore-menu-submenu__arrow"
      />
    </div>
    <ul
      class="mcore-menu-submenu__sub"
      style="display:block"
    >
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        核保权限定义
      </li>
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        核保权限分配
      </li>
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        规则配置
      </li>
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        人工核保
      </li>
    </ul>
  </li>
  <li
    class="mcore-menu-submenu mcore-menu-submenu--level-1"
  >
    <div
      class="mcore-menu-submenu__title mcore-menu-submenu__title-level-1"
      style="padding-left:48px"
    >
      <span>
        <span />
        <span>
          批改
        </span>
      </span>
      <i
        class="mcore-menu-submenu__arrow"
      />
    </div>
    <ul
      class="mcore-menu-submenu__sub"
      style="display:block"
    >
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        批改新增
      </li>
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        批改复核
      </li>
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        批改回退
      </li>
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        批改共享池
      </li>
    </ul>
  </li>
</ul>
`;

exports[`Menu renders nested SubMenus correctly 1`] = `
<ul
  class="mcore-menu mcore-menu--light mcore-menu--inline"
  role="menu"
>
  <li
    class="mcore-menu-submenu mcore-menu-submenu--level-1"
  >
    <div
      class="mcore-menu-submenu__title mcore-menu-submenu__title-level-1"
      style="padding-left:48px"
    >
      <span>
        <span />
        <span>
          理赔
        </span>
      </span>
      <i
        class="mcore-menu-submenu__arrow"
      />
    </div>
    <ul
      class="mcore-menu-submenu__sub"
      style="display:block"
    >
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        报案
      </li>
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        任务分配
      </li>
      <li
        class="mcore-menu-submenu mcore-menu-submenu--level-2"
      >
        <div
          class="mcore-menu-submenu__title"
          style="padding-left:48px"
        >
          <span>
            <span />
            <span>
              理赔工作流
            </span>
          </span>
          <i
            class="mcore-menu-submenu__arrow"
          />
        </div>
        <ul
          class="mcore-menu-submenu__sub"
          style="display:block"
        >
          <li
            class="mcore-menu-item mcore-menu-item--level-3"
            role="menuitem"
            style="padding-left:60px"
          >
            休假维护
          </li>
          <li
            class="mcore-menu-item mcore-menu-item--level-3"
            role="menuitem"
            style="padding-left:60px"
          >
            时效维护
          </li>
        </ul>
      </li>
    </ul>
  </li>
  <li
    class="mcore-menu-submenu mcore-menu-submenu--level-1"
  >
    <div
      class="mcore-menu-submenu__title mcore-menu-submenu__title-level-1"
      style="padding-left:48px"
    >
      <span>
        <span />
        <span>
          新契约
        </span>
      </span>
      <i
        class="mcore-menu-submenu__arrow"
      />
    </div>
    <ul
      class="mcore-menu-submenu__sub"
      style="display:block"
    >
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        投保单复核
      </li>
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        在线投保单管理
      </li>
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        投保单录入
      </li>
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        新增计划
      </li>
    </ul>
  </li>
  <li
    class="mcore-menu-submenu mcore-menu-submenu--level-1"
  >
    <div
      class="mcore-menu-submenu__title mcore-menu-submenu__title-level-1"
      style="padding-left:48px"
    >
      <span>
        <span />
        <span>
          核保
        </span>
      </span>
      <i
        class="mcore-menu-submenu__arrow"
      />
    </div>
    <ul
      class="mcore-menu-submenu__sub"
      style="display:block"
    >
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        核保权限定义
      </li>
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        核保权限分配
      </li>
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        规则配置
      </li>
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:48px"
      >
        人工核保
      </li>
    </ul>
  </li>
</ul>
`;

exports[`Menu renders vertical Menu with SubMenu correctly 1`] = `
<ul
  class="mcore-menu mcore-menu--light mcore-menu--vertical"
  role="menu"
>
  <li
    class="mcore-menu-submenu mcore-menu-submenu--level-1"
  >
    <div
      class="mcore-menu-submenu__title mcore-menu-submenu__title-level-1"
      style="padding-left:20px"
    >
      <span>
        <span />
        <span>
          新契约
        </span>
      </span>
      <i
        class="mcore-menu-submenu__arrow"
      />
    </div>
    <ul
      class="mcore-menu mcore-menu-submenu__sub"
      style="display:none"
    >
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:20px"
      >
        投保单复核
      </li>
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:20px"
      >
        在线投保单管理
      </li>
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:20px"
      >
        投保单录入
      </li>
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:20px"
      >
        新增计划
      </li>
    </ul>
  </li>
  <li
    class="mcore-menu-submenu mcore-menu-submenu--level-1"
  >
    <div
      class="mcore-menu-submenu__title mcore-menu-submenu__title-level-1"
      style="padding-left:20px"
    >
      <span>
        <span />
        <span>
          核保
        </span>
      </span>
      <i
        class="mcore-menu-submenu__arrow"
      />
    </div>
    <ul
      class="mcore-menu mcore-menu-submenu__sub"
      style="display:none"
    >
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:20px"
      >
        核保权限定义
      </li>
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:20px"
      >
        核保权限分配
      </li>
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:20px"
      >
        规则配置
      </li>
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:20px"
      >
        人工核保
      </li>
    </ul>
  </li>
  <li
    class="mcore-menu-submenu mcore-menu-submenu--level-1"
  >
    <div
      class="mcore-menu-submenu__title mcore-menu-submenu__title-level-1"
      style="padding-left:20px"
    >
      <span>
        <span />
        <span>
          批改
        </span>
      </span>
      <i
        class="mcore-menu-submenu__arrow"
      />
    </div>
    <ul
      class="mcore-menu mcore-menu-submenu__sub"
      style="display:none"
    >
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:20px"
      >
        批改新增
      </li>
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:20px"
      >
        批改复核
      </li>
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:20px"
      >
        批改回退
      </li>
      <li
        class="mcore-menu-item mcore-menu-item--level-2"
        role="menuitem"
        style="padding-left:20px"
      >
        批改共享池
      </li>
    </ul>
  </li>
</ul>
`;
